--- a/content/lms/2018-07 to 2019 Diary.md
+++ b/content/lms/2018-07 to 2019 Diary.md
@@ -108,3 +108,5 @@ draft: true
 [[2020-01-05]]: Attention-seeking while suffering; Meditations Book 11; [[essays/2019 annual review|2019 annual review]]; Rainbow drawing
 [[2020-01-07]]: Closest to acceptance of my tinnitus
 [[2020-01-10]]: To do tomorrow
+[[2020-01-11]]: Another day in tinnitus world
+[[2020-01-12]]: Healing ear and CBT; Meditations Book 12; Paranum ed Sta. Maria
