--- a/content/essays/uman 2023-08.md
+++ b/content/essays/uman 2023-08.md
@@ -17,7 +17,7 @@ Here are my favorite adventures in writing, philosophy, and contemplation in Aug
 
 ## Jack Gilbert's "Existential" Poetry
 
-After reading [[thoughts/isang taong maghapon by paolo tiausas|Isang Taong Maghapon by Paolo Tiausas]], I realized I wanted to get back to my study of [[thoughts/existentialism|existentialism]]. So, I decided to look for an existentialist [[thoughts/poetry|poetry]] book. Someone on Reddit suggested [[thoughts/jack gilbert|Jack Gilbert's]] *[[thoughts/refusing heaven by jack gilbert|Refusing Heaven]]*. I was surprised to learn that the first poem in this collection, "A Brief for the Defense," was actually a poem I read years back, which I really loved for these lines:
+After reading [[thoughts/isang taong maghapon by paolo tiausas|Isang Taong Maghapon by Paolo Tiausas]], I realized I wanted to get back to my study of [[thoughts/existentialism|existentialism]]. So, I decided to look for an existentialist [[thoughts/poetry|poetry]] book. Someone on Reddit suggested [[thoughts/jack gilbert|Jack Gilbert's]] *[[literature/refusing heaven by jack gilbert|Refusing Heaven]]*. I was surprised to learn that the first poem in this collection, "A Brief for the Defense," was actually a poem I read years back, which I really loved for these lines:
 
 >We must have the stubbornness to accept our gladness in the ruthless furnace of this world. To make injustice the only measure of our attention is to praise the Devil.
 
