--- a/content/thoughts/2022-10-27 seeds.md
+++ b/content/thoughts/2022-10-27 seeds.md
@@ -1,9 +1,9 @@
 ---
-title: "2022-10-27 seeds"
-date: "2022-10-27"
+title: 2022-10-27 seeds
+date: 2022-10-27
+aliases:
+  - 2022-10-27 seeds
 tags:
-- "notes"
-- "seeds"
+  - seeds
 ---
-
 Rem's leaving has left me with a profound existential crisis I have never felt since my depression in 2011 when I left my childhood religion. That was my first awakening. This might be my second.
