--- a/content/thoughts/2023-10-03 seeds.md
+++ b/content/thoughts/2023-10-03 seeds.md
@@ -1,3 +1,3 @@
 There's this kind of spirituality that seeks attention, that is always looking for its benefit whether money, good health, luck. This spirituality pays huge importance to what other people say, to following the rules, to punishing the sinners, to being right. It will not stop until it converts the entire world. It is amazed by things magical: concoctions, objects, words,
 
-Then there's this quiet, subsistent spirituality that doesn't ask for anything other than itself, and because it is small and almost hidden, it stays here for eternity.
+Then there's this quiet, subsistent spirituality that doesn't ask for anything other than itself, and because it is small and almost always hidden, it stays here for eternity.
