--- a/content/lms/2018-07 to 2019 Diary.md
+++ b/content/lms/2018-07 to 2019 Diary.md
@@ -110,3 +110,5 @@ draft: true
 [[2020-01-10]]: To do tomorrow
 [[2020-01-11]]: Another day in tinnitus world
 [[2020-01-12]]: Healing ear and CBT; Meditations Book 12; Paranum ed Sta. Maria
+[[2023-01-13]]: Morning walk with Mama
+[[2023-01-14]]: Anxiet, Corn, Self-help; Annual Review 2019 draft (What didn't go well? Health)
