--- a/content/2023-04-06 seeds.md
+++ b/content/2023-04-06 seeds.md
@@ -7,7 +7,7 @@ tags:
 ---
 
 - [[essays/a walk to maahas road]]
-- [[Being in a place is better than reading about it]]
+- [[thoughts/being in a place is better than reading about it]]
 
 No place stays the same. Like the rest of the world, a place changes constantly every second. It is always a new place. But that newness will be unnoticed without close attention.
 
