--- a/content/lms/2018-07 to 2019 Diary.md
+++ b/content/lms/2018-07 to 2019 Diary.md
@@ -114,3 +114,5 @@ draft: true
 [[2020-01-14]]: Anxiet, Corn, Self-help; Annual Review 2019 (What didn't go well? Health)
 [[2020-01-15]]: Annual Review 2019 (What didn't go well? Sustenance; Meaning; What am I working toward? Health)
 [[2020-01-16]]: Annual Review 2019 (What am I working toward? Sustenance, Creativity)
+[[2020-01-17]]: Signs of hope
+[[2020-01-18]]: I will continue to live today; Routine
