--- a/content/lms/2018-07 to 2019 Diary.md
+++ b/content/lms/2018-07 to 2019 Diary.md
@@ -116,3 +116,6 @@ draft: true
 [[2020-01-16]]: Annual Review 2019 (What am I working toward? Sustenance, Creativity)
 [[2020-01-17]]: Signs of hope
 [[2020-01-18]]: I will continue to live today; Routine
+[[2020-01-19]]: Depression and tinnitus
+[[2020-01-20]]: Morning bike rides
+[[2020-01-21]]: What did I learn this year?
