--- a/content/lms/2018-07 to 2019 Diary.md
+++ b/content/lms/2018-07 to 2019 Diary.md
@@ -111,7 +111,7 @@ draft: true
 [[2020-01-11]]: Another day in tinnitus world
 [[2020-01-12]]: Healing ear and CBT; Meditations Book 12; Paranum ed Sta. Maria
 [[2020-01-13]]: Morning walk with Mama
-[[2020-01-14]]: Anxiet, Corn, Self-help; Annual Review 2019 (What didn't go well? Health)
+[[2020-01-14]]: Anxiety, Corn, Self-help; Annual Review 2019 (What didn't go well? Health)
 [[2020-01-15]]: Annual Review 2019 (What didn't go well? Sustenance; Meaning; What am I working toward? Health)
 [[2020-01-16]]: Annual Review 2019 (What am I working toward? Sustenance, Creativity)
 [[2020-01-17]]: Signs of hope
@@ -119,3 +119,6 @@ draft: true
 [[2020-01-19]]: Depression and tinnitus
 [[2020-01-20]]: Morning bike rides
 [[2020-01-21]]: What did I learn this year?
+[[2020-01-22]]: Drawing of Mabini, Rizal, and Del Pilar (?) from a Pinto painting
+[[2020-01-25]]: Ginhawa Well-being Retreat notes; Illness Body Chart
+[[2020-01-26]]: Baybayin
