--- a/content/thoughts/2022-06-23 seeds.md
+++ b/content/thoughts/2022-06-23 seeds.md
@@ -1,10 +1,11 @@
 ---
-title: "2022-06-23 seeds"
-date: "2022-06-23"
+title: 2022-06-23 seeds
+date: 2022-06-23
+aliases:
+  - 2022-06-23 seeds
 tags:
-- "seeds"
+  - seeds
 ---
-
 4:30-7:00 pm
 Ela-Rambutan-Pili-IPB Road
 
