--- a/content/thoughts/2020-11-06 seeds.md
+++ b/content/thoughts/2020-11-06 seeds.md
@@ -1,11 +1,11 @@
 ---
-title: "2020-11-06 seeds"
-date: "2020-11-06"
+title: 2020-11-06 seeds
+date: 2020-11-06
+aliases:
+  - 2020-11-06 seeds
 tags:
-- "notes"
-- "seeds"
+  - seeds
 ---
-
 Pm
 
 5:40
