--- a/content/thoughts/2023-10-18 seeds.md
+++ b/content/thoughts/2023-10-18 seeds.md
@@ -1,1 +1,40 @@
-I could use the words God and spirit and soul. But I have to redefine them based on my beliefs
+---
+title: 2023-10-18 seeds
+date: 2023-10-19
+tags:
+  - seeds
+---
+I could use the words God and spirit and soul. But I have to redefine them based on my beliefs as an agnostic.
+
+Today I return to LB. Grieving. Still grieving. Perhaps with a lot of internal work to do ahead. To remind myself that I wasn't just letting life pass by me in the past 12 years. But that I was actually growing. Becoming.
+
+I am indeed feeling depression. But I do not despair. The depression is telling me that I could do something about it. It is not the case that I didn't do anything in the past 12 years. The thing is that everyday is a new walk. And in the wilderness, change is the norm. There were friendships, communities I've been a part of. But the cost of freedom is that these communities are never tight. Whether I eventually become a part of a more stable "church" or not, I know what it feels like to be in the wilderness. And I know that it is possible to sustain oneself there. And whenever I feel that being part of a church is the next best thing for me to do, I know that I will cherish this experience with all my heart. It will be more worth it.
+
+But how do I begin?
+
+I am currently in a slightly better position financially. My sustenance projects are:
+1. OVIC updates
+2. Editing Improvement
+
+A day could be:
+AM
+1. Spiritual routine
+2. Editing improvement
+
+PM
+3. OVIC updates
+4. Afternoon spiritual routine
+
+The morning spiritual routine should be brief but uplifting.
+
+The bulk of my mornings should be spent getting better at editing until I find a job.
+
+Late afternoons and evenings could be used for:
+- contemplation (walking in nature)
+- spiritual readings
+
+Must prepare a reading list that I tweak for this purpose. Perhaps a Canban?
+
+Sa bus...
+
+Vendor: Ma'am bili ka na po ng turon. Sayang naman ang opportunity.
