--- a/content/lms/2018-07 to 2019 Diary.md
+++ b/content/lms/2018-07 to 2019 Diary.md
@@ -122,3 +122,6 @@ draft: true
 [[2020-01-22]]: Drawing of Mabini, Rizal, and Del Pilar (?) from a Pinto painting
 [[2020-01-25]]: Ginhawa Well-being Retreat notes; Illness Body Chart
 [[2020-01-26]]: Baybayin
+[[2020-01-31]]: Signs of habituation; Attending Clyne's wedding
+
+[[2020-02-01]]: A crazy January; [[translations/aro kayari aro|Aro Kayari Aro]]
