--- a/content/lms/2018-07 to 2019 Diary.md
+++ b/content/lms/2018-07 to 2019 Diary.md
@@ -125,3 +125,5 @@ draft: true
 [[2020-01-31]]: Signs of habituation; Attending Clyne's wedding
 
 [[2020-02-01]]: A crazy January; [[translations/aro kayari aro|Aro Kayari Aro]]
+[[2020-02-02]]: When shit happens in life, [[thoughts/there is no destiny|there is no destiny]]
+[[2020-02-03]]: Going back to Botao
