--- a/content/lms/2018-07 to 2019 Diary.md
+++ b/content/lms/2018-07 to 2019 Diary.md
@@ -127,3 +127,6 @@ draft: true
 [[2020-02-01]]: A crazy January; [[translations/aro kayari aro|Aro Kayari Aro]]
 [[2020-02-02]]: When shit happens in life, [[thoughts/there is no destiny|there is no destiny]]
 [[2020-02-03]]: Going back to Botao
+[[2020-02-04]]: [[thoughts/complete silence is a myth|complete silence is a myth]]
+
+[[2020-02-06]]: Weather and harvest in Sta. Maria
