--- a/content/lms/2018-07 to 2019 Diary.md
+++ b/content/lms/2018-07 to 2019 Diary.md
@@ -128,5 +128,6 @@ draft: true
 [[2020-02-02]]: When shit happens in life, [[thoughts/there is no destiny|there is no destiny]]
 [[2020-02-03]]: Going back to Botao
 [[2020-02-04]]: [[thoughts/complete silence is a myth|complete silence is a myth]]
-
+[[2020-02-05]]: Positive vibes only is not dangerous ([[thoughts/a good life requires freedom to control attention|a good life requires freedom to control attention]])
 [[2020-02-06]]: Weather and harvest in Sta. Maria
+[[2020-02-07]]: Drawing of Freedom Park; Lea Mari at Cinco, LB
