--- a/content/lms/2018-07 to 2019 Diary.md
+++ b/content/lms/2018-07 to 2019 Diary.md
@@ -120,6 +120,7 @@ draft: true
 [[2020-01-20]]: Morning bike rides
 [[2020-01-21]]: What did I learn this year?
 [[2020-01-22]]: Drawing of Mabini, Rizal, and Del Pilar (?) from a Pinto painting
+[[2020-01-24]]: [[poems/ako|Ako]]
 [[2020-01-25]]: Ginhawa Well-being Retreat notes; Illness Body Chart
 [[2020-01-26]]: Baybayin
 [[2020-01-31]]: Signs of habituation; Attending Clyne's wedding
@@ -131,3 +132,4 @@ draft: true
 [[2020-02-05]]: Positive vibes only is not dangerous ([[thoughts/a good life requires freedom to control attention|a good life requires freedom to control attention]])
 [[2020-02-06]]: Weather and harvest in Sta. Maria
 [[2020-02-07]]: Drawing of Freedom Park; Lea Mari at Cinco, LB
+[[2020-02-08]]: [[thoughts/ginhawa poetics|ginhawa poetics]]; [[poems/di ako marunong tumula|di ako marunong tumula]]
