--- a/content/lms/2018-07 to 2019 Diary.md
+++ b/content/lms/2018-07 to 2019 Diary.md
@@ -133,3 +133,6 @@ draft: true
 [[2020-02-06]]: Weather and harvest in Sta. Maria
 [[2020-02-07]]: Drawing of Freedom Park; Lea Mari at Cinco, LB
 [[2020-02-08]]: [[thoughts/ginhawa poetics|ginhawa poetics]]; [[poems/di ako marunong tumula|di ako marunong tumula]]
+[[2020-02-12]]: [[poems/nais kitang ipagdiwang|Nais Kitang Ipagdiwang]]
+[[2020-02-14]]: Toot extraction
+[[2020-02-16]]: The only icons you need to draw acc. to Ed; What I hope my partner has concerning money; sustenance areas and goals
