--- a/content/lms/2018-07 to 2019 Diary.md
+++ b/content/lms/2018-07 to 2019 Diary.md
@@ -136,3 +136,5 @@ draft: true
 [[2020-02-12]]: [[poems/nais kitang ipagdiwang|Nais Kitang Ipagdiwang]]
 [[2020-02-14]]: Toot extraction
 [[2020-02-16]]: The only icons you need to draw acc. to Ed; What I hope my partner has concerning money; sustenance areas and goals
+[[2020-02-17]]: Shouldn't relax on health; GTD reality check
+[[2020-02-18]]: Balancing progress and fun; GTD Workbook Progress Tarcker; My capture tools
