--- a/content/lms/2018-07 to 2019 Diary.md
+++ b/content/lms/2018-07 to 2019 Diary.md
@@ -137,4 +137,7 @@ draft: true
 [[2020-02-14]]: Toot extraction
 [[2020-02-16]]: The only icons you need to draw acc. to Ed; What I hope my partner has concerning money; sustenance areas and goals
 [[2020-02-17]]: Shouldn't relax on health; GTD reality check
-[[2020-02-18]]: Balancing progress and fun; GTD Workbook Progress Tarcker; My capture tools
+[[2020-02-18]]: Balancing progress and fun; GTD Workbook Progress Tracker; My capture tools
+[[2020-02-19]]: The end goal of life (see [[thoughts/health|health]])
+[[2020-02-20]]: Nes
+[[2020-02-22]]: Father hugs Tantan; Drawing with Tantan
