--- a/content/essays/uman 2022-03.md
+++ b/content/essays/uman 2022-03.md
@@ -40,7 +40,7 @@ If I subscribe to the error theory in thinking about my life purpose, then I cou
 
 While walking one afternoon as I was thinking about these ideas, I realized that I may have committed a serious mistake by equating purpose with meaning. Purpose is simply an answer to the question of why you are doing what you are doing. It is the reason behind an action. Meaning is the interpretation of an object, concept, event, or human life. When life is said to be “meaningful” it probably simply means, we can “say more” about it because it means more to people and that is possible because more significant things happened in that life. Both purpose and meaning are concepts, which mean they owe their existence to our mind. Both are contents and creations of the mind but are differentiated because they serve different objectives. One way of describing the relationship between the two is that by living with purpose (i.e., being very intentional about your actions and life in general), you create a more meaningful life.
 
-On a similar tangent, I wrote a very fruitful [[Approach life with humor|note]] on the relationship between nihilism and approaching life with humor. While writing it, I re-read Austin Kleon’s [article](https://austinkleon.com/2020/11/19/the-comedy-of-survival/) on the book, [*The Comedy of Survival*](https://www.goodreads.com/book/show/701314.The_Comedy_of_Survival).
+On a similar tangent, I wrote a very fruitful [[thoughts/approach life with humor|note]] on the relationship between nihilism and approaching life with humor. While writing it, I re-read Austin Kleon’s [article](https://austinkleon.com/2020/11/19/the-comedy-of-survival/) on the book, [*The Comedy of Survival*](https://www.goodreads.com/book/show/701314.The_Comedy_of_Survival).
 
 ### Life Management System
 
