--- a/content/lms/2018-07 to 2019 Diary.md
+++ b/content/lms/2018-07 to 2019 Diary.md
@@ -141,3 +141,5 @@ draft: true
 [[2020-02-19]]: The end goal of life (see [[thoughts/health|health]])
 [[2020-02-20]]: Nes
 [[2020-02-22]]: Father hugs Tantan; Drawing with Tantan
+[[2020-02-23]]: [[resilience]]
+[[2020-02-24]]: [[anarchic healthcare]]
