--- a/content/lms/2018-07 to 2019 Diary.md
+++ b/content/lms/2018-07 to 2019 Diary.md
@@ -143,3 +143,6 @@ draft: true
 [[2020-02-22]]: Father hugs Tantan; Drawing with Tantan
 [[2020-02-23]]: [[resilience]]
 [[2020-02-24]]: [[anarchic healthcare]]
+[[2020-02-25]]: My mind and body need me now
+[[2020-02-26]]: The creative path (i.e., career) as therapy; Big life projects
+[[2020-02-27]]: Masamirey Cove Resort (drawing)
