--- a/content/lms/2018-07 to 2019 Diary.md
+++ b/content/lms/2018-07 to 2019 Diary.md
@@ -146,3 +146,5 @@ draft: true
 [[2020-02-25]]: My mind and body need me now
 [[2020-02-26]]: The creative path (i.e., career) as therapy; Big life projects
 [[2020-02-27]]: Masamirey Cove Resort (drawing)
+[[2020-02-28]]: Populating the projects list; Anatomy of an action
+[[2020-02-29]]: Drawing of the yellow-vented bulbul
