--- a/content/2022-09-30 seeds.md
+++ b/content/2022-09-30 seeds.md
@@ -6,7 +6,7 @@ tags:
 - "seeds"
 ---
 
-- [[Capitalism]]
+- [[thoughts/capitalism]]
 
 I have started to feel skeptical of capitalism. I am in search of a middle ground. I still think it is the way to optimizing human freedom. But it can be taken far ahead. With community out. What is the best way to live an economic life?
 
