--- a/content/thoughts/2023-10-10 seeds.md
+++ b/content/thoughts/2023-10-10 seeds.md
@@ -4,6 +4,9 @@ date: 2023-10-10
 tags:
   - seeds
 ---
+- [[thoughts/capitalism|capitalism]]
+- [[subsistent creativity]]
+
 Principles
 
 1. Low-Tech
