--- a/content/lms/2023-03 to 2023-10 diary.md
+++ b/content/lms/2023-03 to 2023-10 diary.md
@@ -130,5 +130,9 @@ tags:
 [[2023-08-24]]: [[poems/this morning|This Morning]]
 [[2023-08-29]]: Reading Thomas Moore; [[thoughts/personal religion]]; Philosophy and contemplation first before writing
 [[2023-08-30]]: Reclaiming my mornings for my contemplative and religious calling; Contemplation first before writing; Personal religion for boundary-setting; Protecting my calling
+[[2023-08-31]]: Conceptualizing the [[thoughts/buhian entry|Buhian entry]].
+
+[[2023-09-01]]: Putting my relationship with Lea in perspective
+[[2023-09-02]]: Confronting my getting used to walking in LB
 
 [[2023-09-08]]: Draft of Buhian essay
