--- a/content/essays/uman 2023-09.md
+++ b/content/essays/uman 2023-09.md
@@ -6,7 +6,7 @@ tags:
   - evergreens
 draft: false
 ---
-[[uman|𝌡 Uman]] means “change.” It is a monthly newsletter I send every first week of the month, documenting what it means to pursue philosophy, contemplation, and writing independently as a way of life. It used to be a separate newsletter. But I've integrated it into [[templates/tlw|The Long Walk]]. Read the past issue [[essays/uman 2023-08|here]].
+[[thoughts/uman|𝌡 Uman]] means “change.” It is a monthly newsletter I send every first week of the month, documenting what it means to pursue philosophy, contemplation, and writing independently as a way of life. It used to be a separate newsletter. But I've integrated it into [[templates/tlw|The Long Walk]]. Read the past issue [[essays/uman 2023-08|here]].
 ***
 ![Bee Farm](essays/images/beefarm.jpg)
 # Faith and Contentment
