--- a/content/lms/2023-03 to 2023-10 diary.md
+++ b/content/lms/2023-03 to 2023-10 diary.md
@@ -136,7 +136,9 @@ tags:
 [[2023-09-02]]: Confronting my getting used to walking in LB
 [[2023-09-03]]: To dos; Writing memory of my first few months in LB; Wanting to talk to God
 [[2023-09-05]]: Draft of proposal for the expansion of Ili's website
-
+[[2023-09-06]]: [[thoughts/faith|faith]]
 [[2023-09-07]]: List of walking poems
 [[2023-09-08]]: Draft of Buhian essay
 [[2023-09-09]]: Continuation of draft of the Buhian entry
+[[2023-09-10]]: Why QR codes for the Buhian entry
+[[2023-09-12]]: Exploring pastoral work; Why I have avoided this possibility; Writing as a form of teaching
