--- a/content/lms/2023-03 to 2023-10 diary.md
+++ b/content/lms/2023-03 to 2023-10 diary.md
@@ -142,3 +142,5 @@ tags:
 [[2023-09-09]]: Continuation of draft of the Buhian entry
 [[2023-09-10]]: Why QR codes for the Buhian entry
 [[2023-09-12]]: Exploring pastoral work; Why I have avoided this possibility; Writing as a form of teaching
+[[2023-09-14]]: Contemplating how to deal with patriarchy
+[[2023-09-15]]: [[vignettes/aglibut ave]]
