--- a/content/lms/2023-03 to 2023-10 diary.md
+++ b/content/lms/2023-03 to 2023-10 diary.md
@@ -144,3 +144,7 @@ tags:
 [[2023-09-12]]: Exploring pastoral work; Why I have avoided this possibility; Writing as a form of teaching
 [[2023-09-14]]: Contemplating how to deal with patriarchy
 [[2023-09-15]]: [[vignettes/aglibut ave]]
+[[2023-09-16]]: walking, draft, talahardin
+[[2023-09-17]]: Depression; Unease with the Bohol trip; iChing reading
+[[2023-09-22]]: Highlights of the Bohol trip; To dos
+[[2023-09-23]]: Reflections on where to bring my writing
