--- a/content/lms/2023-03 to 2023-10 diary.md
+++ b/content/lms/2023-03 to 2023-10 diary.md
@@ -150,3 +150,4 @@ tags:
 [[2023-09-23]]: Reflections on where to bring my writing
 [[2023-09-25]]: Rewriting poems to send to GBL: [[poems/peryad binmaley|peryad binmaley]], [[poems/obong|obong]]
 [[2023-09-26]]: Rewriting poems to send to GBL: [[poems/perdonam iray dumaralos|perdonam iray dumaralos]], [[poems/lawari|lawari]]
+[[2023-09-27]]: A spiritual life through words
