--- a/content/lms/2023-10 to 2023 diary.md
+++ b/content/lms/2023-10 to 2023 diary.md
@@ -6,3 +6,5 @@ tags:
 draft: true
 ---
 [[2023-10-29]]: [[thoughts/imaoka statement one|imaoka statement one]]
+[[2023-10-30]]: [[thoughts/imaoka statement two|imaoka statement two]]
+[[2023-10-31]]: more ideas on the [[thoughts/self|self]]
