--- a/content/lms/2023-03 to 2023-10 diary.md
+++ b/content/lms/2023-03 to 2023-10 diary.md
@@ -151,3 +151,6 @@ tags:
 [[2023-09-25]]: Rewriting poems to send to GBL: [[poems/peryad binmaley|peryad binmaley]], [[poems/obong|obong]]
 [[2023-09-26]]: Rewriting poems to send to GBL: [[poems/perdonam iray dumaralos|perdonam iray dumaralos]], [[poems/lawari|lawari]]
 [[2023-09-27]]: A spiritual life through words
+
+[[2023-10-01]]: Bulwak after a fight with Lea while walking
+[[2023-10-02]]: [[vignettes/writing as faith|writing as faith]]
