--- a/content/lms/2023-03 to 2023-10 diary.md
+++ b/content/lms/2023-03 to 2023-10 diary.md
@@ -154,3 +154,5 @@ tags:
 
 [[2023-10-01]]: Bulwak after a fight with Lea while walking
 [[2023-10-02]]: [[vignettes/writing as faith|writing as faith]]
+[[2023-10-03]]: thoughts after CIMB closure: simple life, source of income not business to get busy with
+[[2023-10-04]]: thoughts on [[writing]]; thoughts on [[freelancing]]
