--- a/content/lms/2023-10 to 2023 diary.md
+++ b/content/lms/2023-10 to 2023 diary.md
@@ -8,3 +8,5 @@ draft: true
 [[2023-10-29]]: [[thoughts/imaoka statement one|imaoka statement one]]
 [[2023-10-30]]: [[thoughts/imaoka statement two|imaoka statement two]]
 [[2023-10-31]]: more ideas on the [[thoughts/self|self]]
+
+[[2023-11-01]]: [[thoughts/imaoka statement three|imaoka statement three]]
