--- a/content/essays/uman 2022-07.md
+++ b/content/essays/uman 2022-07.md
@@ -28,7 +28,7 @@ Here is July 2022's cairn.
 
 ### Thoreau
 
-I reviewed and improved my notes on [[thoughts/henry david thoreau]]. I studied and thought about Thoreau for a good chunk of July 2022. I researched his choice of literary medium: the [[Romantic excursion|romantic excursion]], and read about his quest to live his unique version of [[Transcendentalism]] and how this organized his various interests. I also continued reading *[[thoughts/walden by thoreau|Walden]]*.
+I reviewed and improved my notes on [[thoughts/henry david thoreau]]. I studied and thought about Thoreau for a good chunk of July 2022. I researched his choice of literary medium: the [[Romantic excursion|romantic excursion]], and read about his quest to live his unique version of [[thoughts/transcendentalism]] and how this organized his various interests. I also continued reading *[[thoughts/walden by thoreau|Walden]]*.
 
 But the most crucial step I took with my relationship with Thoreau this month was learning about [[The philosophical stance of Thoreau|Thoreau's philosophical stance]] after reading the [Stanford Encyclopedia of Philosophy entry on him](https://plato.stanford.edu/entries/thoreau/). It showed me how different I am from him philosophically, which was mind-blowing and depressing at the same time.
 
