--- a/content/lms/2023-10 to 2023 diary.md
+++ b/content/lms/2023-10 to 2023 diary.md
@@ -10,3 +10,4 @@ draft: true
 [[2023-10-31]]: more ideas on the [[thoughts/self|self]]
 
 [[2023-11-01]]: [[thoughts/imaoka statement three|imaoka statement three]]
+[[2023-11-02]]: [[thoughts/imaoka statement four|imaoka statement four]]
