--- a/content/lms/2023-03 to 2023-10 diary.md
+++ b/content/lms/2023-03 to 2023-10 diary.md
@@ -156,3 +156,6 @@ tags:
 [[2023-10-02]]: [[vignettes/writing as faith|writing as faith]]
 [[2023-10-03]]: thoughts after CIMB closure: simple life, source of income not business to get busy with
 [[2023-10-04]]: thoughts on [[writing]]; thoughts on [[freelancing]]
+[[2023-10-05]]: Thinking about my creative business setup
+[[2023-10-06]]: Focus on establishing a consistent flow of income before creative projects
+[[2023-10-08]]: To: read Andy's essay on writing prompts, OVIC, etc.
