--- a/content/lms/2023-10 to 2023 diary.md
+++ b/content/lms/2023-10 to 2023 diary.md
@@ -11,3 +11,6 @@ draft: true
 
 [[2023-11-01]]: [[thoughts/imaoka statement three|imaoka statement three]]
 [[2023-11-02]]: [[thoughts/imaoka statement four|imaoka statement four]]
+[[2023-11-03]]: [[thoughts/imaoka statement five|imaoka statement five]]
+
+[[2023-11-07]]: Lessening tv watching to invest to more important activities; sleeping earlier to wake up earlier
