--- a/content/thoughts/2023-11-12 seeds.md
+++ b/content/thoughts/2023-11-12 seeds.md
@@ -19,3 +19,5 @@ I dream of a world where selves are allowed to self-actualize to be as free as p
 I dream of a cooperative society where social structures are in place to maximize true freedom of all together while being mindful of the interconnectedness of everythingz
 
 I dream of a world where human, non-humans, and nature become one, where love and compassion flows.
+
+Walking as Free Spiritual Writing Methodology
