--- a/content/lms/2023-10 to 2023 diary.md
+++ b/content/lms/2023-10 to 2023 diary.md
@@ -13,6 +13,7 @@ draft: true
 [[2023-11-02]]: [[thoughts/imaoka statement four|imaoka statement four]]
 [[2023-11-03]]: [[thoughts/imaoka statement five|imaoka statement five]]
 [[2023-11-04]]: [[thoughts/imaoka statement six|imaoka statement six]]
+[[2023-11-05]]: [[thoughts/imaoka statement seven|imaoka statement seven]]; return to inner calling after engaging in many writing projects.; distancing myself from writing in Pangasinan; thoughts where I am now one year after Rem died
 
 [[2023-11-07]]: Lessening tv watching to invest to more important activities; sleeping earlier to wake up earlier
 [[2023-11-08]]: [[thoughts/shinichiro imaoka|Shinichiro Imaoka's]] egoless way; Leaving social media; Rejecting mainstream literary ambitions to focus on the inner path of compassion and egolessness
