--- a/content/lms/2023-10 to 2023 diary.md
+++ b/content/lms/2023-10 to 2023 diary.md
@@ -17,3 +17,7 @@ draft: true
 
 [[2023-11-07]]: Lessening tv watching to invest to more important activities; sleeping earlier to wake up earlier
 [[2023-11-08]]: [[thoughts/shinichiro imaoka|Shinichiro Imaoka's]] egoless way; Leaving social media; Rejecting mainstream literary ambitions to focus on the inner path of compassion and egolessness
+
+[[2023-11-13]]: Bitten by ants while reading [[literature/literary transcendentalism buell|literary transcendentalism buell]] at Carillion; the connection between [[thoughts/free religion|free religion]] and [[thoughts/transcendentalism|transcendentalism]]; inspiration vs. craft; [[writing is meditation]]; ministry as poet-priest; using arts (primarily writing) to help other embrace a free, creative spirituality
+
+[[2023-11-15]]: First group seiza session with Miki Nakura via Zoom; Formal invitation to create a moai; Consider returning to IG
