--- a/content/thoughts/2020-10-10 seeds.md
+++ b/content/thoughts/2020-10-10 seeds.md
@@ -1,10 +1,11 @@
 ---
-title: "2020-10-10 seeds"
-date: "2022-10-10"
+title: 2020-10-10 seeds
+date: 2022-10-10
+aliases:
+  - 2020-10-10 seeds
 tags:
-- "seeds"
+  - seeds
 ---
-
 I left the house around 4:20. I took my former favorite trail to avoid the highway. I saw some farmers already tilling their land for their next crop. I observe the same thing in the morning when I rode my bike. Farmers seem to hurry a lot. There is already a next crop about a week after the harvest. Even while other crops have not yet harvested. As I passed by the farmers tilling their land, I noticed that Herons were not alone in their symbiosis with tractor. A smaller white bird almost that looked like a small seagull were also flying around the tilled land behind the tractor. I need to identify this bird.
 
 I just stopped for a while to take a photo of an old water pump around the end of the trail. The effect of the sunlight on it caught my attention.
