--- a/content/lms/2023-10 to 2023 diary.md
+++ b/content/lms/2023-10 to 2023 diary.md
@@ -5,6 +5,9 @@ tags:
   - evergreens
 draft: true
 ---
+[[2023-10-09]]: Trajectory of sustenance related projects
+[[2023-10-10]]: [[writing is coding]]
+
 [[2023-10-29]]: [[thoughts/imaoka statement one|imaoka statement one]]
 [[2023-10-30]]: [[thoughts/imaoka statement two|imaoka statement two]]
 [[2023-10-31]]: more ideas on the [[thoughts/self|self]]
