--- a/content/lms/2023-10 to 2023 diary.md
+++ b/content/lms/2023-10 to 2023 diary.md
@@ -6,7 +6,9 @@ tags:
 draft: true
 ---
 [[2023-10-09]]: Trajectory of sustenance related projects
-[[2023-10-10]]: [[writing is coding]]
+[[2023-10-10]]: [[writing is coding]]; blind contour drawing of Via; Comics exercise with Tan-Tan
+[[2023-10-17]]: A plan to simplify my life to focus on philosophy, contemplation, writing and arts, and action; my agnostic voice
+[[2023-10-19]]: Re-read [[lms/annual review|annual reviews]] to remind you of how much you've accomplished since leaving the JWs; Accomplishments over the past six months
 
 [[2023-10-29]]: [[thoughts/imaoka statement one|imaoka statement one]]
 [[2023-10-30]]: [[thoughts/imaoka statement two|imaoka statement two]]
@@ -28,3 +30,5 @@ draft: true
 [[2023-11-15]]: First group seiza session with Miki Nakura via Zoom; Formal invitation to create a moai; Consider returning to IG
 
 [[2023-11-19]]: Draft of [[essays/whats next for the long walk|whats next for the long walk]]
+
+[[2023-11-21]]: [[thoughts/how to approach complex social issues|how to approach complex social issues]]; using the expansive self argument to persuade people to care for others is still selfish (see [[thoughts/buddha avoided metaphysics|Buddha avoided metaphysics]]); more ideas on [[projects/a walk around lb]]
