--- a/content/thoughts/2023-06-30 seeds.md
+++ b/content/thoughts/2023-06-30 seeds.md
@@ -1,11 +1,11 @@
 ---
-title: "2023-06-30 seeds"
-date: "2023-06-30"
+title: 2023-06-30 seeds
+date: 2023-06-30
+aliases:
+  - 2023-06-30 seeds
 tags:
-
-- "seeds"
+  - seeds
 ---
-
 Perhaps Marvin was right. Let the data dictate how the book will be.
 Instead of exact geolocation coordinates, just say Pili Drive or the name of the street or place. Remember Elio's essay.
 
