--- a/content/thoughts/2022-12-26 seeds.md
+++ b/content/thoughts/2022-12-26 seeds.md
@@ -1,11 +1,11 @@
 ---
-title: "2022-12-26 seeds"
-date: "2022-12-26"
+title: 2022-12-26 seeds
+date: 2022-12-26
+aliases:
+  - 2022-12-26 seeds
 tags:
-
-- "seeds"
+  - seeds
 ---
-
 If you are gonna build something. Build something useful.
 
 Some ideas for websites someone ought to build:
