--- a/content/lms/2023-10 to 2023 diary.md
+++ b/content/lms/2023-10 to 2023 diary.md
@@ -9,6 +9,8 @@ draft: true
 [[2023-10-10]]: [[writing is coding]]; blind contour drawing of Via; Comics exercise with Tan-Tan
 [[2023-10-17]]: A plan to simplify my life to focus on philosophy, contemplation, writing and arts, and action; my agnostic voice
 [[2023-10-19]]: Re-read [[lms/annual review|annual reviews]] to remind you of how much you've accomplished since leaving the JWs; Accomplishments over the past six months
+[[2023-10-20]]: Draft of my email to [[thoughts/andrew j. brown|Andrew J. Brown]]
+[[2023-10-22]]: [[leaves]]
 
 [[2023-10-29]]: [[thoughts/imaoka statement one|imaoka statement one]]
 [[2023-10-30]]: [[thoughts/imaoka statement two|imaoka statement two]]
