--- a/content/lms/2023-10 to 2023 diary.md
+++ b/content/lms/2023-10 to 2023 diary.md
@@ -11,6 +11,9 @@ draft: true
 [[2023-10-19]]: Re-read [[lms/annual review|annual reviews]] to remind you of how much you've accomplished since leaving the JWs; Accomplishments over the past six months
 [[2023-10-20]]: Draft of my email to [[thoughts/andrew j. brown|Andrew J. Brown]]
 [[2023-10-22]]: [[leaves]]
+[[2023-10-23]]: [[projects someday/a book about los baños|A book about Los Baños]] but made of devotional poems like [[literature/being home norris and sibley|Being Home]]; Models for integrating work and art
+
+[[2023-10-25]]: Using "You" to refer to God, the divine in oneself, or the collection of everything that exists; [[thoughts/self|self]] as a river
 
 [[2023-10-29]]: [[thoughts/imaoka statement one|imaoka statement one]]
 [[2023-10-30]]: [[thoughts/imaoka statement two|imaoka statement two]]
