--- a/content/2022-12-12 seeds.md
+++ b/content/2022-12-12 seeds.md
@@ -20,3 +20,20 @@ This race
 
 Stars were born
 at random
+
+---
+As I sat, I saw a _Maria Cafra_ perched on the thick cable wire behind the _guyabano_ trees. Large drops of water hang on the wire like tiny translucent _banderitas_. The bird shook off the water from its body, making its feather stand. It did this steadily without moving its feet, and I was amazed to see the wire unmoved. Once satisfied, it sat straight and took a quick shit. Then it flew off.
+
+It was my last day in Pangasinan after ten days of stay. I told myself I might just be a _kumukurit_ after all. Two book projects were on top of my mind: a high fantasy novel written purely in Pangasinan (an idea that has haunted me for more than three years now) and, most recently, a photo book about walking in Pangasinan.
+
+The prospect of writing these books excited me. Perhaps, I told myself, I should just write them all at once, leaving one to do the other only to return to it again--a sort of productive procrastination.
+
+I am beginning to feel even more enamored with the idea of getting to know Pangasinan on a more intimate level even if the thought of returning to where I came from still frightens me. I am grateful for everything that was given to me, but that doesn't mean I am happy about all of them and that I think they fit me perfectly. I don't know of any other noble reason for leaving home than to find the things that could complete us--those that represent who we truly are. Home is not always found in the geographic space the universe has thrown us into.
+
+That said, writing a book about Pangasinan will require me to return and stay there for a long time--to walk trails that traverse political boundaries and truly understand Caboloan as intimately as possible.
+
+While finishing my translations of the foreword of a friend's book launching early next year, I discovered that the Tagalog word _pabaon_ does not have an equivalent in English. The closest is accouterment, but it is not even close to what _pabaon_ means. I am beginning to love translation more than editing.
+
+As I was about to go for a walk in the evening, my father and uncle arrived with some _tupig_. Vince, I want to watch _Quezon's Game_, my uncle said, so I immediately reached for my phone, connected my Apple TV account to the TV, rented the movie, and watched the film with him and Papa. It was a good film--highly educational and underrated. My respect for Quezon grew just a little bit.
+
+After watching, I had dinner, then I took a 30-minute walk to watch the night sky for the last time while I was there.
