--- a/content/2022-12-13 seeds.md
+++ b/content/2022-12-13 seeds.md
@@ -11,3 +11,10 @@ tags:
 Our poetry expands with our vocabulary.
 Our vocabulary expands through empathy, through giving a shit.
 You learn that a certain word has a different meaning because you cared enough to ask.
+
+***
+I was woken up early by two pesky roosters. They were crowing as early as four in the morning. I had to get out of the house, pick up the _walis tingting_, and hit the branches where they slept at night. The rascals flew away, startled, making loud noises still, but at least farther away. But they went back around five, and I had to do it again. I could no longer go back to sleep. Oh, I hate roosters!
+
+I left early, caught a bus, and slept a good amount of time while on my way back to Los Baños. During one of my waking moments, I wrote this note in my Obsidian:
+
+> Our poetry expands with our vocabulary. Our vocabulary expands through empathy, through giving a shit. You learn that a certain word has a different meaning because you cared enough to ask.
