--- a/content/2022-12-16 seeds.md
+++ b/content/2022-12-16 seeds.md
@@ -5,7 +5,6 @@ tags:
 
 - "seeds"
 ---
-
 - [[poems/i was waiting]]
 
 I was waiting
@@ -21,4 +20,9 @@ And it matters
 Because no one tells me
 It's okay
 
-I dont need to know the name of the star for me to resonate with it.
+I don't need to know the name of the star for me to resonate with it.
+
+***
+I wrote the following affirmation on my Obsidian's daily note:
+
+> "I am not my livelihood. I have done a lot to transform my life, my inner life, and that is where my real work is. That is where I should worry whether I am doing well or not."
