--- a/content/2022-12-18 seeds.md
+++ b/content/2022-12-18 seeds.md
@@ -5,7 +5,6 @@ tags:
 
 - "seeds"
 ---
-
 - [[you never change things by fighting the existing reality - fuller]]
 
 Journal prompts
@@ -19,3 +18,6 @@ What is your relationship with self-forgiveness?
 ~ Buckminster Fuller
 
 Source: As quoted in Beyond Civilization: Humanity's Next Great Adventure​
+
+***
+While on the way to a freelancers' year-end gathering with my partner, I read the beautifully illustrated essay by Ralph Ammer entitled [**"The Creative Switch."**](https://ralphammer.substack.com/p/the-creative-switch) It reminded me of some ideas I encountered in the past about divergent and convergent processes involved in all creative human endeavors. Ammer uses the term "crazy mode" to refer to divergence or that process where we gather all our options and try things out. He then uses the phrase "sober mode" to refer to convergence or the process where we start to filter our ideas, edit, and eventually commit to one or a few. Everything starts with divergence because you can't really know what you want unless you try things out first.
