--- a/content/lms/2023-10 to 2023 diary.md
+++ b/content/lms/2023-10 to 2023 diary.md
@@ -14,7 +14,9 @@ draft: true
 [[2023-10-23]]: [[projects someday/a book about los baños|A book about Los Baños]] but made of devotional poems like [[literature/being home norris and sibley|Being Home]]; Models for integrating work and art
 
 [[2023-10-25]]: Using "You" to refer to God, the divine in oneself, or the collection of everything that exists; [[thoughts/self|self]] as a river
-
+[[2023-10-26]]: Not fame as a writer but use writing for spirituality; Being Home meditation on standing
+[[2023-10-27]]: Schedule when waking up by 5 am.
+[[023-10-28]]: The tragedy of trying to sleep early; s
 [[2023-10-29]]: [[thoughts/imaoka statement one|imaoka statement one]]
 [[2023-10-30]]: [[thoughts/imaoka statement two|imaoka statement two]]
 [[2023-10-31]]: more ideas on the [[thoughts/self|self]]
