--- a/content/2022-12-21 seeds.md
+++ b/content/2022-12-21 seeds.md
@@ -5,7 +5,6 @@ tags:
 
 - "seeds"
 ---
-
 - thinking about what action to take
 - doing the specific action
 
@@ -16,3 +15,14 @@ The second in the ground level.
 Life is about going back and forth between these two modes.
 
 Make sure you are doing the right thing and doing that thing as present and mindful as possible.
+
+***
+I created the following note:
+
+> There are two kinds of action:
+> 
+> 1. Thinking about what action to take
+> 
+> 2. Doing the specific action
+> 
+> The first occurs in the [[sky level]] of the [[life management system]], while the latter occurs at the [[ground level]]. [[Living]] is about going back and forth between these two kinds of action. This back and forth makes sure that one is doing the right thing and doing it as present and mindful as possible.
