--- a/content/essays/uman 2023-09.md
+++ b/content/essays/uman 2023-09.md
@@ -15,7 +15,7 @@ The timer I use during meditation checks up on my mood before every practice. It
 
 But then I encountered the following excerpt from the essay "Presence, Memory, and Faith" by Steven E. Webb from *Wilderness and the Heart*, a book about [[thoughts/henry bugbee|Henry Bugbee's]] philosophy.
 
->Fishing stands for the life of faith, and the leaping fish stands for those exclamatory experiences—perceptual, mnemonic, or both—that may supervene upon that life. Apart from our active commitment to what the river may bestow, we would never cast our lines and the fish would never leap. This does not mean that the fish must leap. We can't control their presence, and if we seek for control we shall reduce our lives to continual frustration. Faith, like fishing, has the somewhat oxymoronic character of active waiting—of *keeping* oneself open to whatever may come. Thus wanting a saving experience at the end of one's days not only indicates and unwholesome fixation on something one can't finally possess, but is quite beside the point. The issue is not the availability or durability of such experiences as isolated moments, but rather what they confirm, if and when they do occur, about the "omnirelevant truth"—affirmed and kept in faith—that our world *is* a holy place, that things *are* worthy of love, and that our life together with them *is* affirmable even in our moments of obscurity, and even as we perish.
+>Fishing stands for the life of faith, and the leaping fish stands for those exclamatory experiences—perceptual, mnemonic, or both—that may supervene upon that life. Apart from our active commitment to what the river may bestow, we would never cast our lines and the fish would never leap. This does not mean that the fish must leap. We can't control their presence, and if we seek for control we shall reduce our lives to continual frustration. Faith, like fishing, has the somewhat oxymoronic character of active waiting—of *keeping* oneself open to whatever may come. Thus wanting a saving experience at the end of one's days not only indicates an unwholesome fixation on something one can't finally possess, but is quite beside the point. The issue is not the availability or durability of such experiences as isolated moments, but rather what they confirm, if and when they do occur, about the "omnirelevant truth"—affirmed and kept in faith—that our world *is* a holy place, that things *are* worthy of love, and that our life together with them *is* affirmable even in our moments of obscurity, and even as we perish.
 
 Reflecting on these words while walking one night at Ela Ave. in September, I realized that I could find contentment in every moment regardless of the situation and despite things being not okay. I could do this through faith, a word I've avoided ever since [[essays/a never-ending walk|leaving my childhood religion]], but now I'm exploring and reintegrating into my life through my interpretation.
 
