--- a/content/lms/2023-10 to 2023 diary.md
+++ b/content/lms/2023-10 to 2023 diary.md
@@ -12,7 +12,7 @@ draft: true
 [[2023-10-20]]: Draft of my email to [[thoughts/andrew j. brown|Andrew J. Brown]]
 [[2023-10-22]]: [[leaves]]
 [[2023-10-23]]: [[projects someday/a book about los baños|A book about Los Baños]] but made of devotional poems like [[literature/being home norris and sibley|Being Home]]; Models for integrating work and art
-
+[[2023-10-24]]: [[thoughts/financial lessons|financial lessons]]
 [[2023-10-25]]: Using "You" to refer to God, the divine in oneself, or the collection of everything that exists; [[thoughts/self|self]] as a river
 [[2023-10-26]]: Not fame as a writer but use writing for spirituality; Being Home meditation on standing
 [[2023-10-27]]: Schedule when waking up by 5 am.
@@ -39,3 +39,7 @@ draft: true
 [[2023-11-19]]: Draft of [[essays/whats next for the long walk|whats next for the long walk]]
 
 [[2023-11-21]]: [[thoughts/how to approach complex social issues|how to approach complex social issues]]; using the expansive self argument to persuade people to care for others is still selfish (see [[thoughts/buddha avoided metaphysics|Buddha avoided metaphysics]]); more ideas on [[projects/a walk around lb]]
+
+[[2023-11-24]]: Draft of [[essays/a goodness lurking|A Goodness Lurking]]
+[[2023-11-25]]: Continuation of draft for A Goodness Lurking
+[[2023-11-26]]: Continuation of draft for A Goodness Lurking
