--- a/content/essays/uman 2022-07.md
+++ b/content/essays/uman 2022-07.md
@@ -58,7 +58,7 @@ I also explored [[Ordinary language philosophy|ordinary language philosophy]], w
 
 I asked myself: [[How can I combine truth and beauty in one philosophical practice?]] And I wrote what I wanted to create: artifacts of writing around universal subject matters, which are place-based and use the romantic excursion as their device.
 
-I then listed some [[Ideas on how to explore lyrical philosophy in my work|ideas on how I could explore and create these forms of philosophy in my work]]. Thinking about lyrical philosophy made me ask about [[Emotions|emotions]] and their difference from feelings. The more I think about it, the more I see that philosophy sprouts out of the same tree that poetry comes from: wonder. I journaled about this similarity: [[Poetry and narrative trace their history so readers can re-enact them]].
+I then listed some [[Ideas on how to explore lyrical philosophy in my work|ideas on how I could explore and create these forms of philosophy in my work]]. Thinking about lyrical philosophy made me ask about [[thoughts/emotions|emotions]] and their difference from feelings. The more I think about it, the more I see that philosophy sprouts out of the same tree that poetry comes from: wonder. I journaled about this similarity: [[Poetry and narrative trace their history so readers can re-enact them]].
 
 ### Photography and philosophy
 
