--- a/content/lms/2023-10 to 2023 diary.md
+++ b/content/lms/2023-10 to 2023 diary.md
@@ -30,6 +30,7 @@ draft: true
 [[2023-11-07]]: Lessening tv watching to invest to more important activities; sleeping earlier to wake up earlier
 [[2023-11-08]]: [[thoughts/shinichiro imaoka|Shinichiro Imaoka's]] egoless way; Leaving social media; Rejecting mainstream literary ambitions to focus on the inner path of compassion and egolessness
 [[2023-11-09]]: [[thoughts/my conversion process|my conversion process]]
+[[2023-11-10]]: [[thoughts/doubt|doubt]]
 [[2023-11-11]]: Writing as competition is hurting me; Current life as free religion ministry; People I can minister to; [[thoughts/my ministry|my ministry]]; Plans on instituting ministry; Free religion as answer to the question of how to be a pastor without religion
 
 [[2023-11-13]]: Bitten by ants while reading [[literature/literary transcendentalism buell|literary transcendentalism buell]] at Carillion; the connection between [[thoughts/free religion|free religion]] and [[thoughts/transcendentalism|transcendentalism]]; inspiration vs. craft; [[writing is meditation]]; ministry as poet-priest; using arts (primarily writing) to help other embrace a free, creative spirituality
@@ -43,3 +44,5 @@ draft: true
 [[2023-11-24]]: Draft of [[essays/a goodness lurking|A Goodness Lurking]]
 [[2023-11-25]]: Continuation of draft for A Goodness Lurking
 [[2023-11-26]]: Continuation of draft for A Goodness Lurking
+
+[[2023-12-01]]: A recap of November and some intentions for December 2023
