--- a/content/lms/2023-10 to 2023 diary.md
+++ b/content/lms/2023-10 to 2023 diary.md
@@ -32,11 +32,12 @@ draft: true
 [[2023-11-09]]: [[thoughts/my conversion process|my conversion process]]
 [[2023-11-10]]: [[thoughts/doubt|doubt]]
 [[2023-11-11]]: Writing as competition is hurting me; Current life as free religion ministry; People I can minister to; [[thoughts/my ministry|my ministry]]; Plans on instituting ministry; Free religion as answer to the question of how to be a pastor without religion
-
+[[2023-11-12]]: Why I'm a descendant of the transcendentalists
 [[2023-11-13]]: Bitten by ants while reading [[literature/literary transcendentalism buell|literary transcendentalism buell]] at Carillion; the connection between [[thoughts/free religion|free religion]] and [[thoughts/transcendentalism|transcendentalism]]; inspiration vs. craft; [[writing is meditation]]; ministry as poet-priest; using arts (primarily writing) to help other embrace a free, creative spirituality
 [[2023-11-14]]: Writing as ministry; more ideas about [[thoughts/spiritual writing|spiritual writing]]; my work, play, love, and health dashboard
 [[2023-11-15]]: First group seiza session with Miki Nakura via Zoom; Formal invitation to create a moai; Consider returning to IG
 
+[[2023-11-18]]: Updates for [[thoughts/my workview|my workview]] and [[thoughts/my lifeview|my lifeview]]
 [[2023-11-19]]: Draft of [[essays/whats next for the long walk|whats next for the long walk]]
 
 [[2023-11-21]]: [[thoughts/how to approach complex social issues|how to approach complex social issues]]; using the expansive self argument to persuade people to care for others is still selfish (see [[thoughts/buddha avoided metaphysics|Buddha avoided metaphysics]]); more ideas on [[projects/a walk around lb]]
@@ -46,3 +47,4 @@ draft: true
 [[2023-11-26]]: Continuation of draft for A Goodness Lurking
 
 [[2023-12-01]]: A recap of November and some intentions for December 2023
+[[2023-12-02]]: Some thoughts on how to do the upcoming weeklong walk at LB
